Length and format validators, many fixes and improvements

--- a/spec/dummy_app/Gemfile
+++ b/spec/dummy_app/Gemfile
@@ -30,6 +30,7 @@ gem 'rails-angulate', path: '../../..'
 gem 'slim'
 gem 'byebug', group: :development
 gem 'better_errors', group: :development
+gem 'binding_of_caller', group: :development
 
 # Use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
